--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,10 @@
 #root {
-  max-width: 1280px;
+  /* max-width: 1280px; */
   margin: 0 auto;
-  padding: 2rem;
+  padding: 4rem;
   text-align: center;
+    /* overflow-x: hidden;
+  width: 100%; */
 }
 
 .logo {
@@ -40,3 +42,4 @@
 .read-the-docs {
   color: #888;
 }
+
