--- a/src/index.css
+++ b/src/index.css
@@ -41,10 +41,10 @@ a {
   padding: 10px;
 }
 
-/*
-.dropdown-menu li {
-  padding: 4px 8px;
-} */
+.navbar .dropdown-menu {
+    right: 0;
+    left: auto;
+}
 
 .dropdown:hover .dropdown-menu {
   display: block;
@@ -55,12 +55,6 @@ a {
   /* Larghezza della scrollbar */
   height: 12px;
   /* Altezza della scrollbar (per gli elementi orizzontali) */
-}
-
-/* Stile per il "track" (la parte grigia dietro la scrollbar) */
-::-webkit-scrollbar-track {
-  /* background: #f1f1f1; Colore di sfondo del track */
-  /* border-radius: 5px; Raggio del bordo per angoli arrotondati */
 }
 
 /* Stile per il "thumb" (la parte che si sposta) */
@@ -115,7 +109,7 @@ header {
 /* Cambia il colore di sfondo del corpo dell'accordion (dove c'è la descrizione) */
 .accordion-body,
 .custom-accordion-body {
-  background-color: #353535 !important;
+  background-color: #000000d5 !important;
   /* Stesso colore del bottone (bg-dark) */
   color: white !important;
   /* Mantiene il testo bianco */
@@ -242,3 +236,64 @@ header {
   margin-left: 0.1rem;
   margin-right: 0.1rem;
 }
+
+.btn-purple {
+  background-color: #8A2BE2 !important;    
+  border-color: #8A2BE2 !important;
+  color: #fff !important;         
+}
+
+.btn-purple:hover {
+  background-color: #7326b5 !important; 
+  border-color: #7326b5 !important;
+}
+
+.error-msg {
+  min-height: 1.5rem;         /* mantiene sempre lo spazio verticale */
+  color: inherit;             /* rosso per l’errore */
+  transition: opacity 0.3s ease;
+  opacity: 1;
+  white-space: normal;        /* consente l’andata a capo */
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+  width: 100%;                /* impedisce allargamenti */
+  text-align: left;
+  display: block;             /* garantisce che occupi sempre la larghezza */
+}
+
+.error-msg.hidden {
+  opacity: 0;
+  pointer-events: none;       /* evita click su eventuali link invisibili */
+}
+
+/* Overlay che copre tutta la finestra */
+.loader-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255, 0.7); /* sfondo semi-trasparente */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999; /* sopra tutto */
+}
+
+/* Spinner puro CSS */
+.loader {
+  width: 60px;
+  height: 60px;
+  border: 6px solid #ccc;
+  border-top: 6px solid #007bff; /* colore blu */
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+
+/* Animazione */
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+
